static/css/base.css
/* ... */
.reply-create .edui-default .edui-editor {
}
.reply-create form {
  width: 100%;
  margin: 25px auto;
}
.reply-create textarea {
    height: 130px;
}
.no-border {
  border: 0 !important;
}
.no-top-border {
  border-top: 0 !important;
}
.no-bottom-border {
  border-bottom: 0 !important;
}
.no-padding {
  padding: 0 !important;
}
.text-center {
  text-align: center;
}
.center {
  margin-left: auto;
  margin-right: auto;
}
.explain {
  background-color: rgb(248, 248, 248);
}
.explain div {
  width: 60px;
  margin: 0 auto;
  padding: 20px 0;
}

.pressed a {
  color: #999 !important;
}
.chzn-choices {
  border: 1px solid #cccccc !important;
}
.menu-list {
  display: none;
}
.open.menu-list {
  display: inline-block;
  margin-left: 12px;
}
.edui-for-removeformat {
  margin: 0px;
  height: 0px;
  width: 0px;
  display: none !important;
}
.edui-for-autotypeset {
  margin: 0px;
  height: 0px;
  width: 0px;
  display: none !important;
}
select {
  width: 0px;
  height: 0px;
  border: 0;
  outline: 0;
}
.saveDir {
  display: none;
}
.parent-nodes.title,
.sibling-nodes.title,
.child-nodes.title {
  padding: 10px 20px;
  background-color: rgba(226, 226, 226, 0.31);
}

ul.parent-nodes,
ul.sibling-nodes,
ul.child-nodes {
  overflow: hidden;
  padding: 10px 20px;
  background-color: whitesmoke;
}
ul.parent-nodes li,
ul.sibling-nodes li,
ul.child-nodes li {
  float: left;
  width: 148px;
  min-height: 50px;
  border-radius: 2px;
  margin: 10px;
  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.16);
  background-color: white;
}
ul.parent-nodes li a,
ul.sibling-nodes li a,
ul.child-nodes li a {
  display: block;
}
ul.parent-nodes li a .node-tag,
ul.sibling-nodes li a .node-tag,
ul.child-nodes li a .node-tag{
  padding: 10px 10px 5px 10px;
  border-bottom: 1px solid #e2e2e2;
}
ul.parent-nodes li a.icon,
ul.sibling-nodes li a.icon,
ul.child-nodes li a.icon {
}
ul.parent-nodes li img.icon,
ul.sibling-nodes li img.icon,
ul.child-nodes li img.icon {
  width: 25px;
}
ul.parent-nodes li span.name,
ul.sibling-nodes li span.name,
ul.child-nodes li span.name {
  margin-left: 10px;
  font-size: 14px;
  color: #666;
}
ul.parent-nodes li .description,
ul.sibling-nodes li .description,
ul.child-nodes li .description {
  height: 30px;
  line-height: 32px;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #777;
  padding: 5px 10px 10px 10px;
}
.single .item-content {
  padding-left: 0px;
}
.top-border {
  border-top: 1px solid #e2e2e2;
}

.topic a#more-content {
  display: block;
  height: 14px;
  width: 14px;
  background-color: rgb(204, 204, 204);
  color: white;
  padding: 4px;
  line-height: 14px;
  border-radius: 50%;
  text-align: center;
  margin: 0 auto;
  top: -12px;
  position: relative;
}

.message-list {
  padding: 10px 80px;
}

.message-list .message {
  padding: 20px 0;
  border: 0;
  position: relative;
}

.message .meta {
  text-align: center;
  margin-top: 0;
  margin-bottom: 5px;
}

.message .item-content {
  padding: 0;
}
.message .content {
  padding: 10px;
  border: 1px solid #dcdfe1;
  border-radius: 4px;
  max-width: 300px;
  word-wrap: break-word;
}
.message.you {
}
.message.you .meta {
  margin-right: 60px;
}
.message.you .item-content {
  margin: 0 0 0 60px;
}
.message.you .content {
  float: left;
  background-color: #f5f5f5;
}
.message.you .avatar {
  position: absolute;
  left: 0;
}
.message.me {
}
.message.me .meta {
  margin-left: 60px;
}
.message.me .item-content {
  margin: 0 60px 0 0;
}
.message.me .content {
  float: right;
  background-color: #e6f2fa;
}
.message.me .avatar {
  position: absolute;
  right: 0;
}
.message-fm {
  padding: 10px 60px 30px 60px;
  overflow: hidden;
}
.message-fm textarea {
  width: 70%;
  height: 100px;
}
.message-fm .fm-action {
  padding-top: 0px;
  margin-right: 95px;
  float: right;
}

#layout {
  z-index: 99;
  background-color: white;
  width: 30%;
  padding: 20px;
  box-shadow: 0px 0px 34px rgba(0, 0, 0, 0.35);
}

#layout.message textarea {
  width: 96%;
  height: 100px;
}

#layout.message .fm-action {
  padding-top: 0;
  float: right;
}

.layout-header {
  padding-bottom: 15px;
  font-size: 14px;
  font-width: bolder;
  overflow: hidden;
}

.layout-header .title {
  float: left;
}

.layout-close {
  float: right;
  cursor: pointer;
}

.layout-content {
}

.caret {
  position: absolute;
  top: 55px;
  left: 56px;
  width: 10px;
  height: 10px;
}

.me .caret {
  right: 51px;
  left: auto;
}

.caret-outer, .caret-inner {
  position: absolute;
  width: 0;
  height: 0;
  vertical-align: text-bottom;
}
.caret-outer {
  top: 0;
  left: 0;
  z-index: 10;
  border-top: 5px solid transparent;
  border-right: 5px solid #dcdfe1;
  border-bottom: 5px solid transparent;
}

.me .caret-outer {
  border-right: 0;
  border-left: 5px solid #dcdfe1;
}

.caret-inner {
  top: 1px;
  left: 1px;
  z-index: 11;
  border-top: 4px solid transparent;
  border-right: 4px solid #f5f5f5;
  border-bottom: 4px solid transparent;
}

.me .caret-inner {
  left: -1px;
  border-right: 0;
  border-left: 4px solid #e9f3fa;
}
.reply-create .redactor_box {
  width: 78%;
  margin: 0 auto;
}
.reply-create .redactor_editor {
  min-height: 150px;
}
.item-list.message_box .item .title {
  height: 50px;
  line-height: 25px;
  overflow: hidden;
  text-overflow: ellipsis;
}

#noty {
  width: 220px;
  padding: 10px;
  text-align: center;
  color: white;
  font-weight: bolder;
  background: #eee;
  z-index: 10003;
  word-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
}

#noty.success {
  background-color: rgb(56, 156, 44);
}

#noty.info {
  background-color: rgb(213, 176, 82);
}
#noty.error {
  background-color: rgb(202, 91, 91);
}
.fm-error {
  color: rgb(202, 91, 91);
}
#img-select .jcrop-holder {
  margin: 30px auto;
}
#set-avatar-btn {
  margin-top: 15px;
}
.avatar-48 {
  width: 48px;
}
.avatar-60 {
  width: 60px;
}
.avatar-128 {
  width: 128px;
}
.profile-list li {
  margin-bottom: 8px;
}
/* ... */

